--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -15,7 +15,7 @@
 - [x] 1) C 기초 (21:56)
 - [x] 2) 문자열 (19:28)
 - [x] 3) 조건문과 루프 (14:04)
-- [ ] 4) 자료형, 형식 지정자, 연산자 (20:06)
+- [x] 4) 자료형, 형식 지정자, 연산자 (20:06)
 - [ ] 5) 사용자 정의 함수, 중첩 루프 (18:48)
 - [ ] 6) 하드웨어의 한계 (12:28)
 - [ ] Quiz 2
