--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -16,9 +16,9 @@
 - [x] 2) 문자열 (19:28)
 - [x] 3) 조건문과 루프 (14:04)
 - [x] 4) 자료형, 형식 지정자, 연산자 (20:06)
-- [ ] 5) 사용자 정의 함수, 중첩 루프 (18:48)
-- [ ] 6) 하드웨어의 한계 (12:28)
-- [ ] Quiz 2
+- [x] 5) 사용자 정의 함수, 중첩 루프 (18:48)
+- [x] 6) 하드웨어의 한계 (12:28)
+- [x] Quiz 2
 
 ## 3. Array (01:48:15)
 - [ ] 1) 컴파일링 (11:40)
