--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -23,7 +23,7 @@
 ## 3. Array (01:48:15)
 - [x] 1) 컴파일링 (11:40)
 - [x] 2) 디버깅 (16:04)
-- [ ] 3) 코드의 디자인 (09:26)
+- [x] 3) 코드의 디자인 (09:26)
 - [ ] 4) 배열(1) (14:04)
 - [ ] 5) 배열(2) (16:07)
 - [ ] 6) 문자열과 배열 (15:00)
