--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -26,7 +26,7 @@
 - [x] 3) 코드의 디자인 (09:26)
 - [x] 4) 배열(1) (14:04)
 - [x] 5) 배열(2) (16:07)
-- [ ] 6) 문자열과 배열 (15:00)
+- [x] 6) 문자열과 배열 (15:00)
 - [ ] 7) 문자열의 활용 (13:23)
 - [ ] 8) 명령행 인자 (12:31)
 - [ ] Quiz 3
