--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -27,7 +27,7 @@
 - [x] 4) 배열(1) (14:04)
 - [x] 5) 배열(2) (16:07)
 - [x] 6) 문자열과 배열 (15:00)
-- [ ] 7) 문자열의 활용 (13:23)
+- [x] 7) 문자열의 활용 (13:23)
 - [ ] 8) 명령행 인자 (12:31)
 - [ ] Quiz 3
 
