--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -29,7 +29,7 @@
 - [x] 6) 문자열과 배열 (15:00)
 - [x] 7) 문자열의 활용 (13:23)
 - [x] 8) 명령행 인자 (12:31)
-- [ ] Quiz 3
+- [x] Quiz 3
 
 ## 4. Algorithms (01:29:59)
 - [ ] 1) 검색 알고리즘 (11:09)
