--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -33,7 +33,7 @@
 
 ## 4. Algorithms (01:29:59)
 - [x] 1) 검색 알고리즘 (11:09)
-- [ ] 2) 알고리즘 표기법 (07:44)
+- [x] 2) 알고리즘 표기법 (07:44)
 - [ ] 3) 선형 검색 (18:51)
 - [ ] 4) 버블 정렬 (10:54)
 - [ ] 5) 선택 정렬 (08:44)
