--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -37,7 +37,7 @@
 - [x] 3) 선형 검색 (18:51)
 - [x] 4) 버블 정렬 (10:54)
 - [x] 5) 선택 정렬 (08:44)
-- [ ] 6) 정렬 알고리즘의 실행시간 (05:17)
+- [x] 6) 정렬 알고리즘의 실행시간 (05:17)
 - [ ] 7) 재귀 (15:20)
 - [ ] 8) 병합 정렬 (12:00)
 - [ ] Quiz 4
