--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -40,10 +40,10 @@
 - [x] 6) 정렬 알고리즘의 실행시간 (05:17)
 - [x] 7) 재귀 (15:20)
 - [x] 8) 병합 정렬 (12:00)
-- [ ] Quiz 4
+- [x] Quiz 4
 
 ## 5. Memory (01:49:13)
-- [ ] 1) 메모리 주소 (15:24)
+- [x] 1) 메모리 주소 (15:24)
 - [ ] 2) 포인터 (08:53)
 - [ ] 3) 문자열 (13:01)
 - [ ] 4) 문자열 비교 (10:53)
