--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -44,7 +44,7 @@
 
 ## 5. Memory (01:49:13)
 - [x] 1) 메모리 주소 (15:24)
-- [ ] 2) 포인터 (08:53)
+- [x] 2) 포인터 (08:53)
 - [ ] 3) 문자열 (13:01)
 - [ ] 4) 문자열 비교 (10:53)
 - [ ] 5) 문자열 복사 (11:06)
