--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -46,8 +46,8 @@
 - [x] 1) 메모리 주소 (15:24)
 - [x] 2) 포인터 (08:53)
 - [x] 3) 문자열 (13:01)
-- [ ] 4) 문자열 비교 (10:53)
-- [ ] 5) 문자열 복사 (11:06)
+- [x] 4) 문자열 비교 (10:53)
+- [x] 5) 문자열 복사 (11:06)
 - [ ] 6) 메모리 할당과 해제 (09:59)
 - [ ] 7) 메모리 교환, 스택, 힙 (17:33)
 - [ ] 8) 파일 쓰기 (13:33)
