--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -51,13 +51,13 @@
 - [x] 6) 메모리 할당과 해제 (09:59)
 - [x] 7) 메모리 교환, 스택, 힙 (17:33)
 - [x] 8) 파일 쓰기 (13:33)
-- [ ] 9) 파일 읽기 (08:51)
-- [ ] Quiz 5
+- [x] 9) 파일 읽기 (08:51)
+- [x] Quiz 5
 
 ## 6. Data Structures (01:46:01)
-- [ ] 1) malloc과 포인터 복습 (08:51)
-- [ ] 2) 배열의 크기 조정하기 (19:51)
-- [ ] 3) 연결 리스트: 도입 (10:29)
+- [x] 1) malloc과 포인터 복습 (08:51)
+- [x] 2) 배열의 크기 조정하기 (19:51)
+- [x] 3) 연결 리스트: 도입 (10:29)
 - [ ] 4) 연결 리스트: 코딩 (12:20)
 - [ ] 5) 연결 리스트: 시연 (17:16)
 - [ ] 6) 연결 리스트: 트리 (10:15)
