--- a/CS50_2019.md
+++ b/CS50_2019.md
@@ -58,11 +58,11 @@
 - [x] 1) malloc과 포인터 복습 (08:51)
 - [x] 2) 배열의 크기 조정하기 (19:51)
 - [x] 3) 연결 리스트: 도입 (10:29)
-- [ ] 4) 연결 리스트: 코딩 (12:20)
-- [ ] 5) 연결 리스트: 시연 (17:16)
-- [ ] 6) 연결 리스트: 트리 (10:15)
-- [ ] 7) 해시 테이블 (12:31)
-- [ ] 8) 트라이 (05:52)
-- [ ] 9) 스택, 큐, 딕셔너리 (08:36)
-- [ ] Quiz 6
+- [x] 4) 연결 리스트: 코딩 (12:20)
+- [x] 5) 연결 리스트: 시연 (17:16)
+- [x] 6) 연결 리스트: 트리 (10:15)
+- [x] 7) 해시 테이블 (12:31)
+- [x] 8) 트라이 (05:52)
+- [x] 9) 스택, 큐, 딕셔너리 (08:36)
+- [x] Quiz 6
 
